@@ -35,13 +35,8 @@ module Sequel
         :mysql
       end
 
-      # Return a hash containing index information. Hash keys are index name symbols.
-      # Values are subhashes with two keys, :columns and :unique.  The value of :columns
-      # is an array of symbols of column names.  The value of :unique is true or false
-      # depending on if the index is unique.
-      #
-      # Does not include the primary key index or indexes on partial keys.
-      def indexes(table)
+      # Use SHOW INDEX FROM to get the index information for the table.
+      def indexes(table, opts={})
         indexes = {}
         remove_indexes = []
         m = output_identifier_meth
